--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.ddl-auto=update
+
+
+spring.security.user.name=Ankit
+spring.security.user.password=Ankit
+spring.security.user.roles=ADMIN
